--- a/fund.html
+++ b/fund.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>fund.html</title></head><body><h1>fund.html placeholder</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Fund • Constellation</title>
+<link rel="stylesheet" href="ui.css">
+</head>
+<body>
+<main class="container">
+
+<section class="panel"><h1>Fund the Exodus Charter</h1>
+<p>Support logistics, shelter, and family relocation. Give via Cash App: <strong>$zionsanctuary</strong>.</p>
+</section>
+
+</main>
+<script src="app.js"></script>
+</body>
+</html>
