--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!DOCTYPE html><html><head><title>index.html</title></head><body><h1>index.html placeholder</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Portal • Constellation</title>
+<link rel="stylesheet" href="ui.css">
+</head>
+<body>
+<main class="container">
+
+<section class="hero" style="background:#fff;border:2px solid #d7deea;border-radius:16px;padding:20px">
+  <h1>Zion Constellation</h1>
+  <p>Unified portal for Zion Sanctuary • Exodus Charter • Michael Stone Legal • ICHLR • Sovereign Circle • Legal Game.</p>
+  <p>
+    <a class="btn" href="zion_index.html">Enter Zion Sanctuary</a>
+    <a class="btn" href="membership.html" style="margin-left:8px">Legal Membership</a>
+    <a class="btn" href="library.html" style="margin-left:8px">Legal Game Library</a>
+  </p>
+</section>
+
+<section class="panel">
+  <h2>Featured Merch</h2>
+  <div class="grid cols-3">
+    <div class="card"><img src="brnhoodie.png" alt="Hoodie" style="width:100%"><div class="p"><h3>Unisex Hoodie <span class="badge">$55</span></h3></div></div>
+    <div class="card"><img src="brnhatlion.png" alt="Cap" style="width:100%"><div class="p"><h3>Lion Icon Cap <span class="badge">$27</span></h3></div></div>
+    <div class="card"><img src="brnwomensvnecktshirt.png" alt="Women’s V-neck" style="width:100%"><div class="p"><h3>Women’s V‑Neck <span class="badge">$28</span></h3></div></div>
+  </div>
+</section>
+
+</main>
+<script src="app.js"></script>
+</body>
+</html>
