--- a/library.html
+++ b/library.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>library.html</title></head><body><h1>library.html placeholder</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Library • Constellation</title>
+<link rel="stylesheet" href="ui.css">
+</head>
+<body>
+<main class="container">
+
+<section class="panel"><h1>Legal Game Library</h1>
+<p>Manuals, expansions, and drills come online here. Suggested donation: Pay‑what‑you‑can.</p>
+</section>
+
+</main>
+<script src="app.js"></script>
+</body>
+</html>
