--- a/membership.html
+++ b/membership.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><head><title>membership.html</title></head><body><h1>membership.html placeholder</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Membership • Constellation</title>
+<link rel="stylesheet" href="ui.css">
+</head>
+<body>
+<main class="container">
+
+<section class="panel"><h1>Michael Stone Legal — Membership</h1>
+<div class="grid cols-3">
+  <div class="card"><div class="p"><h3>Tier 1 — Sanctuary</h3><p>Toolkits + monthly Q&A</p><p><strong>$25/mo</strong></p></div></div>
+  <div class="card"><div class="p"><h3>Tier 2 — Shield</h3><p>Tier 1 + doc review</p><p><strong>$55/mo</strong></p></div></div>
+  <div class="card"><div class="p"><h3>Tier 3 — People’s Lawyer</h3><p>Priority consults + case kits</p><p><strong>$120/mo</strong></p></div></div>
+</div>
+</section>
+
+</main>
+<script src="app.js"></script>
+</body>
+</html>
