--- a/resources.html
+++ b/resources.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>resources.html</title></head><body><h1>resources.html placeholder</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Resources • Constellation</title>
+<link rel="stylesheet" href="ui.css">
+</head>
+<body>
+<main class="container">
+
+<section class="panel"><h1>Resources & Grants</h1>
+<p>Toolkits and grant templates will be linked here as lightweight downloads.</p>
+</section>
+
+</main>
+<script src="app.js"></script>
+</body>
+</html>
