--- a/zion_index.html
+++ b/zion_index.html
@@ -1,1 +1,30 @@
-<!DOCTYPE html><html><head><title>zion_index.html</title></head><body><h1>zion_index.html placeholder</h1></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Zion Sanctuary • Constellation</title>
+<link rel="stylesheet" href="ui.css">
+</head>
+<body>
+<main class="container">
+
+<section class="panel">
+  <h1>Zion Sanctuary</h1>
+  <p>Books, resources, and movement merch that funds the Exodus mission.</p>
+  <p><a class="btn" href="resources.html">Resources</a> <a class="btn" href="library.html" style="margin-left:8px">Interactive Books / Library</a></p>
+</section>
+
+<section class="panel">
+  <h2>Merch Gallery</h2>
+  <div class="grid cols-3">
+    <div class="card"><img src="copy_of_3dframewallart.png" alt="Framed Art" style="width:100%"><div class="p"><h3>Framed Statement Art <span class="badge">$65</span></h3></div></div>
+    <div class="card"><img src="braceletwithleatherbraid.png" alt="Leather Bracelet" style="width:100%"><div class="p"><h3>Leather Braid Bracelet <span class="badge">$33</span></h3></div></div>
+    <div class="card"><img src="braceletblkstring.png" alt="String Bracelet" style="width:100%"><div class="p"><h3>String Bracelet <span class="badge">$27</span></h3></div></div>
+  </div>
+</section>
+
+</main>
+<script src="app.js"></script>
+</body>
+</html>
